agrega el servicio de catalogo como endpoint

--- a/api-gateway/api-gateway-dev.properties
+++ b/api-gateway/api-gateway-dev.properties
@@ -9,8 +9,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #zuul.routes.consumidor.service-id=demo-eureka-consumidor
 #zuul.routes.consumidor.path= /api/consumidor/**
 
-#zuul.routes.servicio.service-id=demo-eureka-servicio
-#zuul.routes.servicio.path=/api/servicio/**
+zuul.routes.servicio.service-id=catalogo
+zuul.routes.servicio.path=/api/catalogo/**
 
 zuul.routes.usuarios.service-id=servicio-usuarios
 zuul.routes.usuarios.path=/api/usuarios/**
